--- a/package.json
+++ b/package.json
@@ -2,5 +2,10 @@
   "name": "airbnb",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {},
+  "scripts": {
+    "prepare": "husky install"
+  },
+  "dependencies": {}
 }
