--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "main": "server.ts",
   "license": "MIT",
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.3",
